[package]
name = "ar-do"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dialoguer = "0.11"
anyhow = "1.0"
scrypt = "0.11"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
dotenv = "0.15"
clap = { version = "4.5.34", features = ["derive"] }